attempting to fix word wrap bug for source urls

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -34,6 +34,8 @@ p {
 .blog-content {
   margin: 90px auto 32px;
   max-width: 860px;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
 }
 
 .blog-content p {
